<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Thingino DFU</string>
    <string name="status_disconnected">No device connected</string>
    <string name="btn_read">READ</string>
    <string name="btn_write">WRITE</string>
    <string name="btn_diag">Info / Diag</string>
    <string name="diag_title">Device Diagnostics</string>
    <string name="custom_bootloader_title">Custom bootloader (SPL / U-Boot)</string>
    <string name="btn_bootstrap">Bootstrap Device</string>
    <string name="btn_sel_spl">SPL</string>
    <string name="btn_sel_uboot">U-Boot</string>
    <string name="btn_clear_custom">Clear</string>
    <string name="custom_blob_bundled">SPL: bundled\nU-Boot: bundled</string>
    <string name="mode_local_usb">Local USB</string>
    <string name="mode_remote">Remote</string>
    <string name="hint_host">Host</string>
    <string name="hint_port">5050</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="status_dfu_gadget">U-Boot DFU gadget ready</string>
    <string name="settings">Settings</string>
    <string name="settings_backend">Flashing backend</string>
    <string name="settings_verify">Verify after write</string>
    <string name="settings_verify_desc">Read the flash back and compare (slower)</string>
    <string name="settings_reboot">Reboot after flashing</string>
    <string name="settings_reboot_desc">Reset and boot into the new image</string>
    <string name="settings_debug">Debug logging</string>
    <string name="settings_debug_desc">Verbose libtdfu diagnostics in the log</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Prebuilt thingino releases (straight from GitHub; no proxy needed natively) -->
    <string name="release_title">Flash a prebuilt thingino release</string>
    <string name="release_show_all">Show all devices (not just my SoC)</string>
    <string name="release_flash">Flash</string>
    <string name="settings_releases">Prebuilt releases</string>
    <string name="settings_releases_desc">Show the thingino release picker on the main screen</string>
    <string name="settings_advanced">Custom SPL / U-Boot</string>
    <string name="settings_advanced_desc">Show the custom bootloader card on the main screen</string>
</resources>
